# knowledge_base

./: .env  README.md  pyproject.toml
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/core/: load_prompt.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: file_import_service.py
app/import_process/page/: chat.html
app/lm/: embedding_utils.py  lm_utils.py
app/query_process/agent/: main_graph.py
app/query_process/agent/nodes/: node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_service.py
app/utils/: rate_limit_utils.py
my_doc/: yumingxing.md
test/: test_env.py  test_torch.py
