[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "flagembedding>=1.3.5",
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "logger",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.35.1",
    "numpy>=2.4.3",
    "openai-agents>=0.4.2",
    "pandas>=3.0.1",
    "polling>=0.3.2",
    "pydantic-ai-slim[retries]>=1.60.0",
    "pymilvus>=2.6.10",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "regex>=2026.2.28",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.42.0",
]
